테트리스 완성

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="game-text">
+      Game Over
+      <button>RESTART</button>
+    </div>
     <div class="score">0</div>
     <div class="playground">
       <ul></ul>
